9 - code climate - correcting requirements 14

--- a/style.css
+++ b/style.css
@@ -46,9 +46,9 @@ body {
 
 #aprendizado {
   font-size: 15px;
-  color: rgb rgb(231 148 148);
+  color: yellowgreen;
   letter-spacing: 4px;
-  font-family: Impact, Haettenschweiler, Arial Narrow Bold, sans-serif;
+  font-family: Nerko One, cursive;
   text-align: justify;
 }
 
