--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ a:active {
   width: 200px;
   display: block;
   margin: auto;
+  margin-top: 10px;
 }
 
 #portfolio {
@@ -69,7 +70,7 @@ a:active {
 
 ol , ul , table {
   display: inline-block;
-  margin: 35px 107px 50px;
+  margin: 50px 107px;
 }
 
 th , tr , td {
@@ -80,7 +81,7 @@ th , tr , td {
 .lado-esquerdo , .lado-direito {
   border: 2px solid black;
   padding: 5px;
-  margin: 0 25px 10px;
+  margin: 10px 25px;
   display: inline-block;
 }
 
