--- a/style.css
+++ b/style.css
@@ -18,16 +18,19 @@ body {
  
 
 #minha_foto {
-  height:330px;                              border-radius: 200px;
-
-  
-
+  height:330px;
+  border-radius: 200px;
 }
 
 
 #quemsou {
   margin-top: 150px;
   min-height: 300px;
+}
+
+#fototrybe {
+  margin-top: 100px;
+  margin-left: 350px;
 }
 
 .rightApp {
@@ -103,11 +106,12 @@ body {
 
 #plista {
   font-size: 30px;
+  font-weight: 600;
   text-align: center;
   max-width: 70%;
-  margin-left: 150px;
+  margin-left: 170px;
   margin-top: 80px;
-  font-weight: 600;
+  
 }
 
 #licoes_aprendidas {
@@ -125,7 +129,7 @@ body {
 }
 
 .market {
-  margin-top: 500px;
+  margin-top: 100px;
   max-height: 1000px;
 }
 
@@ -135,12 +139,9 @@ body {
   font-weight: 600;
   font-size: 30px;
   min-height: 320px;
+  min-height: 200px;
   
   margin-right: 150px;
-  
-  
-
-  
 }
 
 .mktLeft {
@@ -166,13 +167,13 @@ body {
 #sergin {
   background-color: blue;
   border-radius: 700px;
-  height: 300px;
+  height: 250px;
   
 }
 
 .linkin {
  
- margin-top: 800px;
+ margin-top: 400px;
  margin-left: 200px;
  margin-bottom: 30px;
  font-weight: 600;
@@ -182,14 +183,20 @@ body {
 }
 
 #tryber {
-  background-color: orange;
   max-width: 1500px;
   width: 100%;
   height: 200px;
+  margin-top: 130px;
   
 }
 
-
+#tabela {
+  font-size: 30px;
+  width: 50%; 
+  border-color: rgba(0, 128, 0, 0.856);
+  margin-top: 520px;
+  margin-left: 350px;
+}
 
 #rodape {
   text-align: center;
