primeiro code review

--- a/style.css
+++ b/style.css
@@ -1,75 +1,89 @@
-#all{
-    border: 1px solid gray ;
-    marging:0px;
-    padding: 0px 100px; 
+#all {
+    border: 1px solid gray;
+    padding: 0px 100px;
     }
+
 body {
-    background-color: rgb(253, 251, 251);
-   }
+    background-color:  rgb(253,  251,  251);
+    }
+
 #cabecalho {
     color: black;
-    background-color: rgb(224, 224, 174);
+    background-color:  rgb(224, 224, 174);
     position: fixed;
     top: 0px;
-    margin-bottom:20px;
+    margin-bottom: 20px;
     height: 150px;
-   }
-#titulo{
+    }
+
+#titulo {
     padding: 10px 350px;
-}
+    }
+
 #minha_foto {
-   margin-top: 149px;
-   width: 350px;
-   display: block;
-}
+    margin-top: 149px;
+    width: 350px;
+    display: block;
+    }
+
 .list {
     display: inline-block;
-}
-#unordened{
+    }
+
+#unordened {
     display: inline-block;
-    margin-left:100px ;
-}
-#main_part{
+    margin-left: 100px;
+    }
+
+#main_part {
     margin-top: 60px;
     display: inline-block;
     height: 150px;
-}
-#rodape{
+    }
+
+#rodape {
     padding: 1px 0px 0px 0px;
     font-family: monospace;
-    font-weight: bold;
+    font-weight: 600;
     margin-top: 150px;
-}
-.link{
+    }
+.link {
     font-size: 20px;
     display: inline-block;
-}
+    }
+
 aside {
     width: 30%;
     float: right;
     border-left: 1px solid gray;
     margin-top: -10px;
-}
+    }
+
 aside  p {
     margin: 10px;
-}
+    }
+
 article p {
     width: 80%;
-}
-#cytus{
+    }
+
+#cytus {
     float: right;
-}
-tr, td, th{
+    }
+
+tr, td, th {
     border: 1px solid black;
-}
-#tabela{
-   margin-top: 60px;
-   margin-left: 280px;
-}
-#navegar{
+    }
+
+#tabela {
     margin-top: 60px;
-}
-#aprendizado{
-   font-family: Arial, Helvetica, sans-serif;
-   
-}
+    margin-left: 280px;
+    }
+
+#navegar {
+     margin-top: 60px;
+    }
+
+#aprendizado {
+    font-family: Arial, Helvetica, sans-serif,monospace; 
+    }
