--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
   padding: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
+  z-index: 2;
 }
 #titulo {
   color: white;
@@ -83,6 +84,7 @@ nav a:hover {
   float: right;
 }
 #sobre-mim {
+  margin: 0px;
   background-color: #32bf84;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: white;
