--- a/style.css
+++ b/style.css
@@ -37,33 +37,28 @@ body {
 }
 
   .lado-esquerdo {
-  overflow: hidden;
-  margin-right: 5%;
-  text-align: justify;
-  font-size: 18px;
-  line-height: 30px;
-  float: left;
-  width: 35%;
-
-
-}
-
-  h2 {
-    font-size: 25px;
-    padding-top: 150px;
+    display: inline-block;
+    margin-right: 5%;
+    font-size: 18px;
+    line-height: 30px;
+    padding-left: 20%;
+    text-align: justify;
 
   }
 
-.lado-direito {
-    overflow : auto;
+  .lado-direito {
     text-align: justify;
     padding: 10%;
-    padding-top: 10px;
     font-size: 18px;
     line-height: 30px;
     float: left;
 
 }
+  h2 {
+    font-size: 25px;
+    padding-top: 150px;
+
+  }
 
 #licoes_a_aprender {
     display: inline-block;
@@ -71,7 +66,8 @@ body {
     border-radius: 25px;
     text-align: justify;
     line-height: 35px;
-    padding-right: 15px
+    padding-right: 15px ;
+    margin-left: 150px;
 }
 
 #licoes_aprendidas {
@@ -80,6 +76,7 @@ body {
     border-radius: 25px;
     text-align: justify;
     line-height: 35px;
+    margin-left: 400px;
 
 }
 
