--- a/style.css
+++ b/style.css
@@ -76,14 +76,28 @@ article {
   display: inline-block;
   border: dashed;
   text-align: center;
-  width: 60%;
+  width: 30%;
   margin-left: 10px;
+  margin-bottom: 100px;
+}
+
+#minhaPassagem {
+  display: inline-block;
+  border: dashed;
+  text-align: center;
+  width: 30%;
+  margin-left: 10px;
+  margin-bottom: 100px;
 }
 
 #victor {
   text-align: center;
   font-weight: 800;
   font-style: italic;
+}
+
+#rodape {
+
 }
 
 a {
