--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
 body {
-    background-color: rgb(253 , 251 , 251);
-    font-family: sans-serif;
-    font-size: large;
-    color: grey;
-    line-height: 25px;
+  background-color: rgb(253 , 251 , 251);
+  font-family: sans-serif;
+  font-size: large;
+  color: grey;
+  line-height: 25px;
 }
 #cabecalho {
     position: fixed;
-    top:0px;
+    top: 0;
 }
-
 table {
-    padding: 10px;
-    border: 2px;
-    border-style: dashed;
-    margin: 10px;
+  padding: 10px;
+  border: 2px;
+  border-style: dashed;
+  margin: 10px;
 }
