--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
+* {
+  margin: 0;
+}
+
 body {
   background-color: rgb(253 , 251 , 251);
   font-size: 120%;
+}
+
+main {
+  padding-bottom: 2em;
+  padding-top: 6em;
 }
 
 .lado-direito {
@@ -16,24 +25,55 @@ body {
 }
 
 #artigo {
-  line-height: 1.5em;
   width: 60%;
 }
 
 #cabecalho {
+  background-color: #0fa36b;
   font-family: monospace;
-  padding: 1em;
+  height: 5em;
   position: fixed;
   top: 0;
+  width: 100%;
+}
+
+#licoes {
+  position: fixed;
+  top: 12em;
 }
 
 #minha_foto {
-  border: 0.2em solid black;
+  border: 0.3em solid rgb(253 , 251 , 251);
   border-radius: 50%;
-  margin: 0.5em;
-  width: 200px;
+  margin: 0;
+  position: fixed;
+  right: 0.5em;
+  top: 1em;
+  width: 100px;
+}
+
+#rodape{
+  background-color: #0fa36b;
+  bottom: 0;
+  font-weight: bold;
+  height: 2em;
+  position: fixed;
+  text-align: right;
+  width: 100%;
+}
+
+#tabela {
+  bottom: 4em;
+  position: absolute;
+  right: 2em;
 }
 
 #titulo {
-  color: royalblue;
+  color: rgb(253 , 251 , 251);
+  text-align: center;
+}
+
+#rodape a {
+  color: rgb(253 , 251 , 251);
+  margin: 1em
 }
