--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ main {
   top: 12em;
 }
 
+#licoes h2 {
+  color: rgb(15 , 163 , 107);
+  font-size: 1.5em;
+}
+
 #minha_foto {
   border: 0.3em solid rgb(253 , 251 , 251);
   border-radius: 50%;
@@ -55,7 +60,7 @@ main {
 #rodape {
   background-color: rgb(15 , 163 , 107);
   bottom: 0;
-  font-weight: 800;
+  font-weight: 900;
   height: 2em;
   position: fixed;
   text-align: right;
