--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@ body {
 #cabecalho {
   position: fixed;
   top: 0;
-  min-width: 100%;
-  width: 500px;
-  text-align:center;
+  width: 100%;
+  background-color: #0a7e51;
+  height: 100px;
+  
 }
 
 #titulo {
-  
-  background-color:rgb(34, 146, 51);
+  text-align:center;
+  background-color: #11a36a;
   font-weight:800;
   
 }
@@ -66,7 +67,7 @@ body {
   font-weight: 600;
   float:right;
   max-width:40%;
-  margin-top:100px;
+  margin-top:40px;
   margin-right:50px;
 }
 
@@ -145,7 +146,6 @@ body {
 }
 
 #sergin{
-  background-color:blue;
   border-radius:700px;
   height:250px;
 }
@@ -177,4 +177,5 @@ body {
 
 #rodape{
   text-align:center;
+  padding: 1%;
 }
