verificacao de boas praticas v3

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: rgb(253 ,251 ,251);
+  background-color: rgb(253,251,251);
 }
 
 #cabecalho {
@@ -17,7 +17,7 @@ body {
 }
 
 #titulo {
-  color: rgb(253 ,251 ,251);
+  color: rgb(253,251,251);
 }
 
 #minha_foto {
