--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   font-family: Montserrat, sans-serif;
   color: blue;
   font-size: 20px;
+  line-height: 20px;
 }
 
 #licoes_aprendidas {
