--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: 'Sansita Swashed';
+  font-family: Sansita Swashed, sans-serif;
 }
 
 .titulos {
@@ -93,7 +93,7 @@ body {
   margin-right: 10px;
 }
 
-#table, td {
+#table , td {
   border: 1px solid black;
   height: 50px;
   width: 700px;
