--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
     height: 100;
     background-color: #CFD6CB;
     display: inline-block;
+    position: absolute;
+    top: 820px;
+    z-index: 1;
 }
 
 body {
@@ -24,10 +27,82 @@ body {
     position: fixed;
     top: 0px;
     width: 100em;
+    z-index: 2;
+
+}
+
+#box-aprender {
+
+    padding: 50px;
+    margin: 50px;
+    margin-left: 320px;
+    border: 2px solid #7C606B;
+    border-radius: 20px;
+    width: 20%;
+    height: 250px;
+    background-color: #E8D2D2;
+    display: inline-block;
+    position: absolute;
+    top: 490px;
+    left: 500px;
+    z-index: 1;
+}
+
+#box-aprendidas {
+
+    padding: 50px;
+    margin: 50px;
+    margin-left: 240px;
+    border: 2px solid #7C606B;
+    border-radius: 20px;
+    width: 20%;
+    height: 250px;
+    background-color: #AFBAA8;
+    position: absolute;
+    top: 370px;
     z-index: 1;
 
 }
 
+#contato {
+
+    margin-top: 50px;
+    margin-left: 150px;
+    border-bottom-left-radius: 0%;
+    text-align: center;
+    background-color: #BDCEC7;
+    padding: 50px;
+    width: 150px;
+    border: 2px solid #7C606B;
+    border-radius: 20px;
+    position: absolute;
+    top: 1300px;
+    z-index: 1;
+
+}
+
+#desenvolvido {
+
+    font-size: 15px;
+    position: absolute;
+    top: 1550px;
+    left: 610px;
+    z-index: 1;
+}
+
+#fundo {
+
+    background-color: #DFD6DA;
+    width: 97%;
+    height: 1400px;
+    left: 20px;
+    border: 2px solid #7C606B;
+    border-radius: 20px;
+    position: absolute;
+    top: 200px;
+    z-index: 0;
+
+}
 h1 {
 
     color: #4C1E4F;
@@ -47,73 +122,11 @@ h1 {
     width: 150px;
     border: 2px solid #7C606B;
     border-radius: 20px;
-    position: relative;
+    position: absolute;
     left: 650px;
     top: 0px;
+    z-index: 1;
 
-
-}
-
-#box-aprender {
-
-    padding: 50px;
-    margin: 50px;
-    margin-left: 320px;
-    border: 2px solid #7C606B;
-    border-radius: 20px;
-    width: 20%;
-    height: 250px;
-    background-color: #E8D2D2;
-    display: inline-block;
-    position: absolute;
-    top: 470px;
-    left: 500px;
-}
-
-#box-aprendidas {
-
-    padding: 50px;
-    margin: 50px;
-    margin-left: 240px;
-    border: 2px solid #7C606B;
-    border-radius: 20px;
-    width: 20%;
-    height: 250px;
-    background-color: #AFBAA8;
-
-}
-
-#contato {
-
-    margin-top: 50px;
-    margin-left: 150px;
-    border-bottom-left-radius: 0%;
-    text-align: center;
-    background-color: #BDCEC7;
-    padding: 50px;
-    width: 150px;
-    border: 2px solid #7C606B;
-    border-radius: 20px;
-
-}
-
-#desenvolvido {
-
-    text-align: center;
-    font-size: 15px;
-}
-
-fundo {
-
-    background-color: #DFD6DA;
-    width: 97%;
-    height: 300px;
-    left: 20px;
-    border: 2px solid #7C606B;
-    border-radius: 20px;
-    position: absolute;
-    top: 200px;
-    z-index: 0;
 
 }
 
@@ -131,11 +144,22 @@ fundo {
     border: 8px solid #4C1E4F;
     border-radius: 50%;
     width: 12em;
-    z-index: 2;
+    z-index: 3;
     position: fixed;
     top: 50px;
     left: 150px;
 
+}
+
+.section-inline-block {
+
+    width: 50%;
+    display: inline-block;
+    position: absolute;
+ /*   top: 782px; */
+    top: 970px;
+    left: 600px;
+    
 }
 
 .passagem {
@@ -148,6 +172,8 @@ fundo {
     height: 180px;
     background-color: #AFBAA8;
     display: inline-block;
+    position: absolute;
+    z-index: 1;
  
 }
 #titulo-aprender {
@@ -164,13 +190,3 @@ fundo {
 
 }
 
-.section-inline-block {
-
-    width: 50%;
-    display: inline-block;
-    position: absolute;
- /*   top: 782px; */
-    top: 970px;
-    left: 600px;
-    
-}
