--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(253 , 251 , 251);
   font-family: 'Gill Sans', sans-serif, sans-serif;
-  line-height:33px;
+  line-height: 33px;
 }
 
 #cabecalho {
@@ -9,173 +9,168 @@ body {
   top: 0;
   width: 100%;
   background-color: #0a7e51;
-  height: 100px;
-  
+  height:100px;
 }
 
 #titulo {
-  text-align:center;
+  text-align: center;
   background-color: #11a36a;
-  font-weight:800;
-  
+  font-weight: 800;
+
 }
 
 #minha_foto {
-  height:330px;
-  border-radius:200px;
+  height: 330px;
+  border-radius: 200px;
 }
 
 #quemsou {
-  margin-top:150px;
-  min-height:300px;
+  margin-top: 150px;
+  min-height: 300px;
 }
 
-#fototrybe{
-  margin-top:100px;
-  margin-left:350px;
+#fototrybe {
+  margin-top: 100px;
+  margin-left: 350px;
 }
 
-.rightApp{
-  float:right;
-  margin-top:10px;
-  font-size:30px;
-  max-width:800px;
-  margin-right:35px;
+.rightApp {
+  float: right;
+  margin-top: 10px;
+  font-size: 30px;
+  max-width: 800px;
+  margin-right: 35px;
 }
 
-.leftApp{
-  float:left;
-  margin-top:8px;
-  margin-left:60px;
+.leftApp {
+  float: left;
+  margin-top: 8px;
+  margin-left: 60px;
 }
 
-#main{
-  margin-top:100px;
-  font-size:30px;
+#main {
+  margin-top: 100px;
+  font-size: 30px;
 }
 
-.lado-esquerdo{
-  max-width:45%;
-  float:left;
-  text-align:center;
-  margin-left:50px;
+.lado-esquerdo {
+  max-width: 45%;
+  float: left;
+  text-align: center;
+  margin-left: 50px;
 }
 
-.lado-direito{
-  text-align:center;
+.lado-direito {
+  text-align: center;
+  font-size:  30px;
+  font-weight: 600;
+  float: right;
+  max-width: 40%;
+  margin-top: 40px;
+  margin-right: 50px;
+}
+
+.fotos {
+  display: inline-block;
+}
+
+.fotoMainLeft {
+  max-width: 40%;
+  border-radius: 350px;
+  height: 500px;
+  margin-top: 80px;
+  margin-left: 60px;
+}
+
+.fotoMainRight {
+  float: right;
+  max-width: 40%;
+  border-radius: 500px;
+  height: 500px;
+  margin-top: 70px;
+  margin-right: 80px;
+}
+
+#plista {
   font-size: 30px;
   font-weight: 600;
+  text-align: center;
+  max-width: 70%;
+  margin-left: 170px;
+  margin-top: 80px;
+}
+
+#licoes_aprendidas {
+  font-size: 30px;
+  float: left;
+  margin-left: 250px;
+}
+
+#licoes_a_aprender {
+  font-size: 30px;
   float:right;
-  max-width:40%;
-  margin-top:40px;
-  margin-right:50px;
+  margin-right: 250px;
 }
 
-.fotos{
-  display:inline-block;
+.market {
+  margin-top: 100px;
+  max-height: 1000px;
 }
 
-#tryber{
-  margin-top:100px;
+.mktRight {
+  float: right;
+  font-weight: 600;
+  font-size: 30px;
+  min-height: 320px;
+  margin-right: 150px;
 }
 
-.fotoMainLeft{
-  max-width:40%;
-  border-radius:350px;
-  height:500px;
-  margin-top:80px;
-  margin-left:60px;
+.mktLeft {
+  float: left;
+  font-weight: 600;
+  font-size: 30px;
+  min-height: 240px;
+  min-width: 300px;
+  margin-left: 200px;
+  margin-top: 10px;
 }
 
-.fotoMainRight{
-  float:right;
-  max-width:40%;
-  border-radius:500px;
-  height:500px;
-  margin-top:70px;
-  margin-right:80px;
+.verde {
+  color:rgb(34 , 146 , 51)
 }
 
-#plista{
-  font-size:30px;
-  font-weight:600;
-  text-align:center;
-  max-width:70%;
-  margin-left:170px;
-  margin-top:80px;
+#sergin {
+  border-radius: 700px;
+  height: 250px;
 }
 
-#licoes_aprendidas{
-  font-size:30px;
-  float:left;
-  margin-left:250px;
-}
+.linkin {
+    margin-top: 400px;
+    margin-left: 200px;
+    margin-bottom: 30px;
+    font-weight: 600;
+    font-size: 30px;
+    height: 100px;
+    text-align: left;
+  }
 
-#licoes_a_aprender{
-  font-size:30px;
-  float:right;
-  margin-right:250px;
-}
+#tryber {
+  max-width: 1500px;
+  width: 100%;
+  height: 200px;
+  margin-top: 80px;
+  }
 
-.market{
-  margin-top:100px;
-  max-height:1000px;
-}
+#tabela {
+  font-size: 30px;
+  width: 50%;
+  border-color: rgba(0 , 128 , 0 , 0.856);
+  margin-top: 520px;
+  margin-left: 350px;
+  }
 
-.mktRight{
-  float:right;
-  font-weight:600;
-  font-size:30px;
-  min-height:320px;
-  min-height:200px;
-  margin-right:150px;
-}
-
-.mktLeft{
-  float:left;
-  font-weight:600;
-  font-size:30px;
-  min-height:240px;
-  min-width:300px;
-  margin-left:200px;
-  margin-top:10px;
-}
-
-.verde{
-  color:rgb(34, 146, 51)
-}
-
-#sergin{
-  border-radius:700px;
-  height:250px;
-}
-
-.linkin{
-    margin-top:400px;
-    margin-left:200px;
-    margin-bottom:30px;
-    font-weight:600;
-    font-size:30px;
-    height:100px;
-    text-align:left;
-}
-
-#tryber{
-  max-width:1500px;
-  width:100%;
-  height:200px;
-  margin-top:130px;
-}
-
-#tabela{
-  font-size:30px;
-  width:50%;
-  border-color:rgba(0, 128, 0, 0.856);
-  margin-top:520px;
-  margin-left:350px;
-}
-
-#rodape{
-  text-align:center;
-  padding: 1%;
-}
+#rodape {
+  text-align: center;
+  height: 5px;
+  margin-top: 0;
+  }
