--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   letter-spacing: 2px;
+  font-weight: normal;
 }
 
 .header .aside-left .aside-right .footer {
@@ -92,7 +93,7 @@ body {
   font-weight: 100;
   font-size: normal;
   font-style: normal;
-  color: black;
+  color: rgb(37 34 34);
   font-stretch: semi-condensed;
   letter-spacing: 3px;
   height: auto;
@@ -117,7 +118,9 @@ ul h2,ol h2 {
 }
 
 #aprendizado {
+  float right;
   letter-spacing: 2px;
+  line-height: normal;
   text-align: end;
   background: rgb(79 121 140);
   grid-area: aside-right;
