--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ body {
 }
 
 header {
-  height: 12%;
+  height: 15%;
   width: 100%;
-  background-color: rgba(15, 163, 107, .5);
+  background-color: rgba(15,163,107,.5);
 }
 
 #cabecalho {
@@ -23,7 +23,10 @@ header {
 
 #cabecalho h1 {
   text-align: center;
-  padding: 10px 0 30px 0;
+}
+
+#titulo {
+  padding: 10px 0 30px;
   font-size: 1.8em;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -33,8 +36,8 @@ header {
   padding: 3px;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
-  border-top: rgb(199, 216, 42) solid 4px;
-  background-color: rgb(172, 172, 172);
+  border-top: rgb(199,216,42) solid 4px;
+  background-color: rgb(172,172,172);
 }
 
 nav {
@@ -43,8 +46,13 @@ nav {
 
 main {
   position: absolute;
-  height: 500px;
-  top: 15%;
+  height: 700px;
+  top: 20%;
+  padding: 5px;
+}
+
+div img {
+  width: 40%;
 }
 
 #minha_foto {
@@ -53,34 +61,61 @@ main {
 
 .lado-esquerdo {
   float: left;
-  width: 70%;
+  width: 65%;
+  font-size: 20px;
+  line-height: 26px;
+  text-align: center;
 }
 
 .lado-direito {
   float: right;
   width: 30%;
+  color: rgb(63, 63, 63);
+  font-size: 18px;
+  margin-bottom: 20px;
+  border: outset black 5px;
+  padding: 8px;
 }
 
-div img {
-  width: 40%;
-  float: left;
+article {
+  padding-bottom: 20px;
+}
+
+table {
+  float: right;
+  padding: 100px 0 0 100px;
+  font-size: 18px;
+  width: 60%;
+  
 }
 
 footer {
   position: absolute;
-  top: 900px;
-  height: 100px;
+  top: 1000px;
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(15,163,107,.5);
+  padding: 10px;
 }
 
 address {
-  height: 80px;
+  height: 70%;
+  font-size: 1.3em;
+  align-self: center;
+}
+
+.icon:hover {
+  border-radius: 20%;
+  background-color: white;
 }
 
 .icon {
-  height: 100%;
+  height: 50%;
 }
 
 #atribuicao {
-  height: 20px;
+  height: 30%;
   font-size: 16px;
 }
