--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   letter-spacing: 2px;
-  font-weight: normal;
+  font-weight: normal 1px;
 }
 
 .header .aside-left .aside-right .footer {
@@ -101,7 +101,14 @@ body {
   text-align: justify;
 }
 
-ul h2,ol h2 {
+ul h2 {
+  font-size: medium;
+  font-family: Texturina, serif;
+  font-style: unset;
+  letter-spacing: 3px;
+}
+
+ol h2 {
   font-size: medium;
   font-family: Texturina, serif;
   font-style: unset;
