--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ body {
   background-color: rgb(253 251 251);
   display: grid;
   grid-gap: 5rem;
-  grid-template-areas:
-    'header header header'
+  grid-template-areas: 'header header header'
     'aside-left article aside-right'
     'nav nav nav'
     'footer footer footer';
@@ -70,7 +69,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   letter-spacing: 2px;
-  font-weight: normal 1px;
 }
 
 .header .aside-left .aside-right .footer {
@@ -124,7 +122,7 @@ ol h2 {
   float: left;
 }
 
-#aprendizado {
+#aprendizado1 {
   float: right;
   letter-spacing: 2px;
   line-height: normal;
@@ -136,4 +134,17 @@ ol h2 {
   font-size: 20px;
   color: rgb (23 104 23);
   font-family: Texturina, serif;
+}
+
+#aprendizado {
+  float: left;
+  letter-spacing: 3px;
+  background: rgb(238 238 238);
+  margin-top: 100px;
+  grid-area: article;
+  font-family: fantasy;
+  font-weight: 100;
+  font-style: italic;
+  color: black;
+  text-align: center;
 }
