--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@
     position: absolute;
     top: 820px;
     z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161, 160, 160)
+    box-shadow: 5px 10px 10px rgb(161,160,160)
 }
 
 body {
 
-    background-color: rgb(253, 251, 251);
+    background-color: rgb(253,251,251);
     margin: 0px;
     font-family: sans-serif;
 }
@@ -47,7 +47,7 @@ body {
     top: 500px;
     left: 500px;
     z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161, 160, 160)
+    box-shadow: 5px 10px 10px rgb(161,160,160)
 }
 
 #box-aprendidas {
@@ -63,7 +63,7 @@ body {
     position: absolute;
     top: 370px;
     z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161, 160, 160)
+    box-shadow: 5px 10px 10px rgb(161,160,160)
 
 }
 
@@ -81,7 +81,7 @@ body {
     position: absolute;
     top: 1300px;
     z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161, 160, 160)
+    box-shadow: 5px 10px 10px rgb(161,160,160)
 
 }
 
@@ -105,7 +105,7 @@ body {
     position: absolute;
     top: 200px;
     z-index: 0;
-    box-shadow: 5px 10px 10px rgb(161, 160, 160)
+    box-shadow: 5px 10px 10px rgb(161,160,160)
 
 }
 
@@ -132,7 +132,7 @@ h1 {
     left: 650px;
     top: 0;
     z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161, 160, 160)
+    box-shadow: 5px 10px 10px rgb(161,160,160)
     
 
 }
@@ -180,7 +180,7 @@ h1 {
     display: inline-block;
     position: absolute;
     z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161, 160, 160)
+    box-shadow: 5px 10px 10px rgb(161,160,160)
  
 }
 #titulo-aprender {
