--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
   z-index: 1;
 }
 
-#cabecalho h1, h2 {
+#cabecalho h1 {
   text-align: center;
 }
 
@@ -31,17 +31,21 @@ header {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#cabecalho a {
+nav {
+  position: fixed;
+  top: 14%;
+  text-align: end;
+  z-index: 2;
+}
+
+nav a{
   text-decoration: none;
   padding: 3px;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
   border-top: rgb(199, 216, 42) solid 4px;
+  border-bottom: rgb(199, 216, 42) solid 4px;
   background-color: rgb(172, 172, 172);
-}
-
-nav {
-  text-align: end;
 }
 
 main {
@@ -62,19 +66,21 @@ div img {
 .lado-esquerdo {
   float: left;
   width: 65%;
-  font-size: 20px;
+  font-size: 25px;
   line-height: 26px;
   text-align: center;
+  letter-spacing: 2px;
 }
 
 .lado-direito {
   float: right;
   width: 30%;
   color: rgb(63, 63, 63);
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 20px;
   border: outset black 5px;
   padding: 8px;
+  font-family: fantasy;
 }
 
 article {
@@ -86,6 +92,7 @@ table {
   padding: 100px 0 0 100px;
   font-size: 18px;
   width: 60%;
+  font-family: monospace;
   
 }
 
