--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 .artigo {
 
-    padding: 50px;
-    margin: 50px;
-    border: 2px solid #7C606B;
-    border-radius: 20px;
-    width: 30%;
-    height: 100;
-    background-color: #CFD6CB;
-    display: inline-block;
-    position: absolute;
-    top: 820px;
-    z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161,160,160)
+  padding: 50px;
+  margin: 50px;
+  border: 2px solid #7C606B;
+  border-radius: 20px;
+  width: 30%;
+  height: 100;
+  background-color: #CFD6CB;
+  display: inline-block;
+  position: absolute;
+  top: 820px;
+  z-index: 1;
+  box-shadow: 5px 10px 10px rgb(161, 160, 160)
+  
 }
 
 body {
 
-    background-color: rgb(253,251,251);
+    background-color: rgb(253, 251, 251);
     margin: 0px;
     font-family: sans-serif;
 }
@@ -47,7 +48,7 @@ body {
     top: 500px;
     left: 500px;
     z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161,160,160)
+    box-shadow: 5px 10px 10px rgb(161, 160, 160)
 }
 
 #box-aprendidas {
@@ -63,7 +64,7 @@ body {
     position: absolute;
     top: 370px;
     z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161,160,160)
+    box-shadow: 5px 10px 10px rgb(161, 160, 160)
 
 }
 
@@ -81,7 +82,7 @@ body {
     position: absolute;
     top: 1300px;
     z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161,160,160)
+    box-shadow: 5px 10px 10px rgb(161, 160, 160)
 
 }
 
@@ -105,7 +106,7 @@ body {
     position: absolute;
     top: 200px;
     z-index: 0;
-    box-shadow: 5px 10px 10px rgb(161,160,160)
+    box-shadow: 5px 10px 10px rgb(161, 160, 160)
 
 }
 
@@ -132,7 +133,7 @@ h1 {
     left: 650px;
     top: 0;
     z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161,160,160)
+    box-shadow: 5px 10px 10px rgb(161, 160, 160)
     
 
 }
@@ -180,7 +181,7 @@ h1 {
     display: inline-block;
     position: absolute;
     z-index: 1;
-    box-shadow: 5px 10px 10px rgb(161,160,160)
+    box-shadow: 5px 10px 10px rgb(161, 160, 160)
  
 }
 #titulo-aprender {
