--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ nav a {
 
 main {
   position: absolute;
-  height: 700px;
   top: 20%;
   padding: 5px;
 }
@@ -91,18 +90,24 @@ table {
   padding: 100px 0 0 100px;
   font-size: 18px;
   width: 60%;
-  font-family: monospace;  
+  font-family: monospace;
+}
+
+#lema {
+  z-index: 1;
+  font-size: 18px;
 }
 
 footer {
   position: absolute;
   top: 1000px;
-  height: 150px;
+  height: 140px;
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: rgba(15 , 163 , 107 , 0.5);
   padding: 10px;
+  z-index: -1;
 }
 
 address {
