--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: rgb(253 , 251 , 251);
-  font-family: 'Gill Sans', sans-serif, sans-serif;
+  background-color: rgb( 253 , 251 , 251 );
+  font-family: 'Gill Sans', sans-serif;
   line-height: 33px;
 }
 
@@ -8,7 +8,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: rgb( 9 , 175, 111);
+  background-color: rgb( 9 , 175 , 111 );
   height: 112px;
 }
 
@@ -137,7 +137,7 @@ body {
 }
 
 .verde {
-  color:rgb( 34 , 146 , 51 )
+  color: rgb( 34 , 146 , 51 )
 }
 
 #sergin {
