--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 body {
   background-color: rgb(253 , 251 , 251);
-  margin: 0px;
+  margin: 0;
   font-family: sans-serif;
 }
 
@@ -42,7 +42,7 @@ body {
   top: 500px;
   left: 500px;
   z-index: 1;
-  box-shadow: 5px 10px 10px rgb(161, 160, 160);
+  box-shadow: 5px 10px 10px rgb(161 , 160 , 160);
 }
 
 #box-aprendidas {
@@ -57,7 +57,7 @@ body {
   position: absolute;
   top: 370px;
   z-index: 1;
-  box-shadow: 5px 10px 10px rgb(161, 160, 160);
+  box-shadow: 5px 10px 10px rgb(161 , 160 , 160);
 
 }
 
@@ -73,7 +73,7 @@ body {
   position: absolute;
   top: 1300px;
   z-index: 1;
-  box-shadow: 5px 10px 10px rgb(161, 160, 160);
+  box-shadow: 5px 10px 10px rgb(161 , 160 , 160);
 
 }
 
@@ -95,7 +95,7 @@ body {
   position: absolute;
   top: 200px;
   z-index: 0;
-  box-shadow: 5px 10px 10px rgb(161, 160, 160);
+  box-shadow: 5px 10px 10px rgb(161 , 160 , 160);
 }
 
 h1 {
@@ -117,7 +117,7 @@ h1 {
   left: 650px;
   top: 0;
   z-index: 1;
-  box-shadow: 5px 10px 10px rgb(161, 160, 160);
+  box-shadow: 5px 10px 10px rgb(161 , 160 , 160);
 }
 
 .menu-superior {
@@ -156,7 +156,7 @@ h1 {
   display: inline-block;
   position: absolute;
   z-index: 1;
-  box-shadow: 5px 10px 10px rgb(161, 160, 160);
+  box-shadow: 5px 10px 10px rgb(161 , 160 , 160);
 }
 
 #titulo-aprender {
