--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   border-radius: 20px;
   width: 30%;
   height: 100;
-  background-color: #cfd6cb;
+  background-color: hex#cfd6cb;
   display: inline-block;
   position: absolute;
   top: 820px;
@@ -20,7 +20,7 @@ body {
 }
 
 #cabecalho {
-  background-color: #567568;
+  background-color: hex#567568;
   padding: 5px;
   position: fixed;
   top: 0;
@@ -32,11 +32,11 @@ body {
   padding: 50px;
   margin: 50px;
   margin-left: 320px;
-  border: 2px solid #7c606b;
+  border: 2px solid hex#7c606b;
   border-radius: 20px;
   width: 20%;
   height: 250px;
-  background-color: #e8d2d2;
+  background-color: hex#e8d2d2;
   display: inline-block;
   position: absolute;
   top: 500px;
@@ -49,11 +49,11 @@ body {
   padding: 50px;
   margin: 50px;
   margin-left: 240px;
-  border: 2px solid #7c606b;
+  border: 2px solid hex#7c606b;
   border-radius: 20px;
   width: 20%;
   height: 250px;
-  background-color: #afbaa8;
+  background-color: hex#afbaa8;
   position: absolute;
   top: 370px;
   z-index: 1;
@@ -65,10 +65,10 @@ body {
   margin-top: 50px;
   margin-left: 150px;
   text-align: center;
-  background-color: #bdcec7;
+  background-color: hex#bdcec7;
   padding: 50px;
   width: 130px;
-  border: 2px solid #7c606b;
+  border: 2px solid hex#7c606b;
   border-radius: 20px;
   position: absolute;
   top: 1300px;
@@ -86,11 +86,11 @@ body {
 }
 
 #fundo {
-  background-color: #dfd6da;
+  background-color: hex#dfd6da;
   width: 97%;
   height: 1400px;
   left: 20px;
-  border: 2px solid #7c606b;
+  border: 2px solid hex#7c606b;
   border-radius: 20px;
   position: absolute;
   top: 200px;
@@ -99,7 +99,7 @@ body {
 }
 
 h1 {
-  color: #4c1e4f;
+  color: hex#4c1e4f;
   font-size: 35px;
   text-align: center;
 }
@@ -107,11 +107,11 @@ h1 {
 #licoes {
   margin-top: 230px;
   text-align: center;
-  background-color: #6d2b72;
+  background-color: hex#6d2b72;
   color: aliceblue;
   padding: 30px;
   width: 150px;
-  border: 2px solid #7c606b;
+  border: 2px solid hex#7c606b;
   border-radius: 20px;
   position: absolute;
   left: 650px;
@@ -128,7 +128,7 @@ h1 {
 
 #minha_foto {
   display: block;
-  border: 8px solid #4c1e4f;
+  border: 8px solid hex#4c1e4f;
   border-radius: 50%;
   width: 12em;
   z-index: 3;
@@ -148,7 +148,7 @@ h1 {
 .passagem {
   padding: 50px;
   margin: 50px;
-  border: 2px solid #7c606b;
+  border: 2px solid hex#7c606b;
   border-radius: 20px;
   width: 55%;
   height: 180px;
