--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ main {
   display: inline-block;
   width: fit-content;
   max-width: 850px;
-  margin-top: 130px;
+  margin-top: 135px;
+  margin-left: 5px;
   line-height: 1.3;
 }
 
@@ -195,7 +196,7 @@ main {
   display: inline-block;
   padding: 5px;
   vertical-align: top;
-  margin: 130px 5px 10px 7px;
+  margin: 135px 3px 10px 7px;
   width: fit-content;
   height: fit-content;
   max-width: 460px;
