--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ ol h2 {
   float: left;
 }
 
-#aprendizado_1 {
+/* #aprendizado_1 {
   float: right;
   letter-spacing: 2px;
   line-height: normal;
@@ -134,7 +134,7 @@ ol h2 {
   font-size: 20px;
   color: rgb (23 104 23);
   font-family: Texturina, serif;
-}
+} */
 
 #aprendizado {
   float: left;
@@ -147,4 +147,8 @@ ol h2 {
   font-style: italic;
   color: black;
   text-align: center;
+}
+
+section {
+  float: right;
 }
