--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-  background-color: rgb(253,251,251);
+  background-color: rgb(253 , 251 , 251);
   margin: 0;
   padding: 0;
 }
 
 #cabecalho {
-  background-color: rgb(51,207,119);
+  background-color: rgb(51 , 207 , 119);
   position: fixed;
   top: 0;
   width: 100%;
